<resources>
    <string name="app_name">Lazuli</string>
    <string name="welcome_intro">Welcome to Lazuli</string>
    <string name="login_button">Login</string>
    <string name="emailtxt">Email</string>
    <string name="login_intro">Faça Login na sua conta</string>
    <string name="passwordtxt">Password</string>
    <string name="button_next">Próximo</string>
    <string name="forgottxt">Esqueceu a sua password?</string>
    <string name="signup_text">Crie a sua conta</string>
    <string name="nametxt">Nome</string>
    <string name="rpassword_text">Repeat Password</string>
    <string name="signup_txt">Sign Up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="curso_text">Curso</string>
    <string name="semestre_text">Semestre</string>
    <string name="turma_text">Turma</string>
    <string name="unitxt">IADE</string>
    <string name="agenda_text">Agenda</string>
    <string name="cont_text">Contactos</string>
    <string name="uc_text">UCs</string>
    <string name="event_text">Eventos</string>
    <string name="hora_text">Horário</string>
    <string name="notas_text">Notas</string>
    <string name="guardar_text">Guardar</string>
    <string name="salatxt">Sala</string>
    <string name="professortxt">Professor</string>
    <string name="lembretetxt">Lembrete</string>
    <string name="tarefatxt">Tarefa</string>
    <string name="agendatxt">Agenda</string>
    <string name="testetxt">Teste</string>
    <string name="horatxt">Hora</string>
    <string name="datatxt">Data</string>
    <string name="desctxt">Descrição</string>
    <string name="nextMonth"><![CDATA[<-]]></string>
    <string name="previousMonth"><![CDATA[->]]></string>
    <string-array name="Cursos">
        <item>Engenharia Informática</item>
        <item>Informática de Gestão</item>
        <item>EI e IG</item>
        <item>Creative Technologies</item>
    </string-array>
</resources>