<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewAgenda"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brand_primary"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        app:srcCompat="@drawable/_cll7e_logomakr"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/loginIntro"
        android:layout_width="310dp"
        android:layout_height="103dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/signup_text"
        android:textColor="#26619c"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="119dp"
        android:layout_height="63dp"
        android:layout_marginStart="208dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_next"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/uni"
        android:layout_width="273dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/grey_text_background"
        android:ems="10"
        android:text="@string/unitxt"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#546E7A"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/loginIntro"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="@+id/loginIntro"
        app:layout_constraintTop_toBottomOf="@+id/loginIntro" />

    <EditText
        android:id="@+id/turma"
        android:layout_width="273dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/grey_text_background"
        android:ems="10"
        android:hint="@string/turma_text"
        android:textColor="@color/black"
        android:textColorHint="#546E7A"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/semestre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/semestre"
        app:layout_constraintTop_toBottomOf="@+id/semestre" />

    <EditText
        android:id="@+id/curso"
        android:layout_width="273dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/grey_text_background"
        android:ems="10"
        android:hint="@string/curso_text"
        android:textColor="@color/black"
        android:textColorHint="#546E7A"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/uni"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/uni"
        app:layout_constraintTop_toBottomOf="@+id/uni" />

    <EditText
        android:id="@+id/semestre"
        android:layout_width="273dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/grey_text_background"
        android:ems="10"
        android:hint="@string/semestre_text"
        android:textColor="@color/black"
        android:textColorHint="#546E7A"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/curso"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/curso"
        app:layout_constraintTop_toBottomOf="@+id/curso" />

</androidx.constraintlayout.widget.ConstraintLayout>