<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brand_primary"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047"
        app:srcCompat="@drawable/_cll7e_logomakr"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/welcomeIntro"
        android:layout_width="312dp"
        android:layout_height="53dp"
        android:layout_marginTop="104dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/welcome_intro"
        android:textColor="#26619c"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="252dp"
        android:layout_height="60dp"
        android:layout_marginTop="148dp"
        android:text="@string/login_button"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/welcomeIntro"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="@+id/welcomeIntro"
        app:layout_constraintTop_toBottomOf="@+id/welcomeIntro" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="252dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:text="@string/signup_txt"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />


</androidx.constraintlayout.widget.ConstraintLayout>